Allow ERROR_KEY_DELETED in the DCHECK in RegistryHashStoreContentsWin::Reset().

Bug: 727282
Change-Id: I04e3367680ebe7de5c6ae291a009368e1832175f
Reviewed-on: https://chromium-review.googlesource.com/527724
Reviewed-by: Johan Tibell <tibell@chromium.org>
Commit-Queue: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478208}
Former-commit-id: cdfa351523e32ad73579797f54483fd7c6edc3be